--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -65,13 +65,13 @@ line-height: 14px;
 }
 .header__btn--link{
     color: #000958;
-text-align: center;
-font-family: Poppins;
-font-size: 14px;
-font-style: normal;
-font-weight: 600;
-line-height: 14px;
-padding: 15px 30px;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 14px;
+    padding: 15px 30px;
 }
 /*hero*/
 .hero{
@@ -133,11 +133,11 @@ padding: 15px 30px;
     width: 250px;
     height: 156px;
     border-radius: 10px;
-background: #FFF;
-box-shadow: -17px 14px 68px -4px rgba(207, 174, 132, 0.25);
-bottom: 200px;
-left: 510px;
-z-index: 1;
+    background: #FFF;
+    box-shadow: -17px 14px 68px -4px rgba(207, 174, 132, 0.25);
+    bottom: 200px;
+    left: 510px;
+    z-index: 1;
 }
 .dog__health{
     width: 40px;
@@ -152,22 +152,22 @@ z-index: 1;
 }
 .hero__underline{
     width: 118px;
-height: 4px;
-flex-shrink: 0;
-border-radius: 10px;
-opacity: 0.08;
-background: #000958;
-margin-left: 10px;
-margin-top: 10px;
+    height: 4px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    opacity: 0.08;
+    background: #000958;
+    margin-left: 10px;
+    margin-top: 10px;
 }
 .dog__health--head{
-color: #181E52;
-font-family: Sora;
-font-size: 14px;
-font-style: normal;
-font-weight: 600;
-line-height: 14px;
-margin-left: 10px;
+    color: #181E52;
+    font-family: Sora;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 14px;
+    margin-left: 10px;
 }
 .hero__underline2{
     margin-top: 5px;
@@ -177,22 +177,22 @@ margin-left: 10px;
 }
 .hero__heading{
     width: 517px;
-color: #000958;
-font-family: Sora;
-font-size: 66px;
-font-style: normal;
-font-weight: 800;
-line-height: 76px;
+    color: #000958;
+    font-family: Sora;
+    font-size: 66px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 76px;
 }
 .hero__subheading{
     margin-top: 24px;
     width: 391px;
-color: #656689;
-font-family: Poppins;
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 30px;
+    color: #656689;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
 }
 .hero__action{
     margin-top: 38px;
@@ -200,33 +200,264 @@ line-height: 30px;
 }
 .hero__btn{
     width: 189px;
-height: 60px;
-flex-shrink: 0;
-border-radius: 31px;
-background: #FF5B2E;
-box-shadow: 0px 13px 26px -8px rgba(255, 91, 46, 0.42);
-padding-top: 20px;
+    height: 60px;
+    flex-shrink: 0;
+    border-radius: 31px;
+    background: #FF5B2E;
+    box-shadow: 0px 13px 26px -8px rgba(255, 91, 46, 0.42);
+    padding-top: 20px;
 }
 .hero__subbtn{
-color: #FFF;
-text-align: center;
-font-family: Poppins;
-font-size: 16px;
-font-style: normal;
-font-weight: 600;
-line-height: 16px; 
-padding-left: 40px;
+    color: #FFF;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 16px; 
+    padding-left: 40px;
 }
 .hero__desc--btn{
     color: #000958;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 16px; /* 100% */
+    text-decoration-line: underline;
+    margin-left: 24px;
+    margin-top: 20px;
+}
+/*about*/
+.about{
+    margin-top: 207px;
+}
+.about__inner{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+}
+.about__label{
+    color: #5E6085;
+    font-family: Sora;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 16px;
+}
+.about__heading{
+    margin-top: 15px;
+    width: 446px;
+    color: #000958;
+    font-family: Sora;
+    font-size: 52px;
+    font-weight: 700;
+    line-height: 62px;
+}
+.about__desc{
+    margin-top: 24px;
+    width: 431px;
+    color: #656689;
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 30px;
+}
+.about__checklist{
+    margin-top: 54px;
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: flex-start;
+    gap: 36px;
+}
+.about__check--item::before{
+    content: "";
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    border-radius: 4px;
+    background-color:  #FF5D31;
+}
+.about__check--item::after{
+    content: url(../icon/check.svg);
+    position: absolute;
+    top: 4px;
+    left: 5px;
+}
+.about__check--item{
+    position: relative;
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+    color: #48496A;
+    font-family: Poppins;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 18px;
+}
+.about__card{
+    position: relative;
+    padding-top: 31px;
+    width: 136px;
+    height: 156px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    background: #5BD6E2;
+    box-shadow: -15px 26px 48px 0px rgba(85, 240, 255, 0.17);
+    text-align: center;
+}
+.about__card--title{
+    color: #FFF;
+    text-align: center;
+    font-family: Sora;
+    font-size: 42px;
+    font-weight: 700;
+    line-height: 42px
+}
+.about__card--desc{
+    margin-top: 10px;
+    margin-left: 27px;
+    width: 83px;
+    color: #C6F4F9;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px; 
+}
+.about__decor{
+    position: absolute;
+    top: -40px;
+    right: -30px;
+}
+.about__img--wrapper{
+    position: relative;
+    width: 494px;
+    margin-top: -250px;
+    margin-left: auto;
+}
+.about__img--wrapper::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 16px;
+    background: linear-gradient(180deg, #FCE0EF 0%, #FAC3D1 100%);
+    background-color: #FCE0EF;
+    height: 336px;
+    z-index: -1;
 
-text-align: center;
-font-family: Poppins;
-font-size: 16px;
-font-style: normal;
-font-weight: 500;
-line-height: 16px; /* 100% */
-text-decoration-line: underline;
-margin-left: 24px;
-margin-top: 20px;
+}
+.about__img{
+    width: 450px;
+    display: block;
+    margin: 0 auto;
+}
+.about__media--decor{
+    position: absolute;
+    top: 157px;
+    right: -50px;
+    z-index: -1;
+}
+.about__img--wrapper--bottom{
+    position: relative;
+    display: block;
+    margin-left: -10px;
+    margin-top: 220px;
+    width: 458px;
+    height: 500px;
+    flex-shrink: 0;
+    border-radius: 18px;
+    background: #5BD6E2;
+}
+.about__media--decor--bottom{
+    position: absolute;
+    z-index: 1;
+    top: 430px;
+}
+.section-heading{
+    margin-top: 129px;
+    color: #000958;
+    font-family: Sora;
+    font-size: 52px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 62px;
+}
+.section-desc{
+    margin-top: 24px;
+    color: #656689;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+.tab__list{
+    position: relative;
+    margin-top: 52px;
+    display: flex;
+    
+}
+.tab__list::after, .tab__item--active::after, .tab__content-more::after {
+    position: absolute;
+    content: "";
+    left: 0;
+    right: o;
+    bottom: 0;
+    width: 80%;
+    height: 2px;
+    border-radius: 1px;
+    background-color: #ff5b2e;
+    opacity: 0.07;
+}
+.tab__item--active::after{
+    width: 95px;
+    opacity: 1;
+}
+.tab__item{
+    padding-bottom: 10px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+    margin-right: 20px;
+    cursor: pointer;
+}
+.tab__contents{
+    padding-top: 10px;
+}
+.tab__content-item{
+    display: none;
+    padding-top: 32px;
+}
+.tab__content-item-active{
+    display: block;
+}
+.tab__content-desc{
+    color: #656689;
+    font-family: Poppins;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px; 
+    width: 391px;
+}
+.tab__content-more{
+    position: relative;
+    display: inline-block;
+    margin-top: 20px;
+    padding-bottom: 5px;
+    color: #FF5D31;
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 16px;
+}
+.tab__content-more::after{
+    opacity: 1;
+    width: 86px;
+    height: 2px;
+    background: #FF5D31;
 }
