--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -461,3 +461,131 @@ line-height: 14px;
     height: 2px;
     background: #FF5D31;
 }
+/*service*/
+.service{
+    margin-top: 190px;
+    background: #FFF6ED;
+    padding-top: 68px;
+}
+.service__top{
+    align-items: center;
+    text-align: center;
+}
+.service__desc{
+    color: #5E6085;
+    text-align: center;
+    font-family: Sora;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 16px; 
+}
+.service__heading{
+    margin-top: 15px;
+    color: #000958;
+    text-align: center;
+    font-family: Sora;
+    font-size: 52px;
+    font-weight: 700;
+    line-height: 62px; 
+}
+.service__body{
+    margin-top: 71px;
+}
+.service-item{
+    margin-bottom: 24px;
+    width: 294px;
+    height: 208px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 2px rgba(255, 188, 122, 0.26);
+    background: #FFF;
+}
+.service-item__heading{
+    padding-top: 30px;
+    margin-left: 40px;
+    color: #000958;
+    font-family: Sora;
+    font-size: 22px;
+    font-weight: 600;
+    line-height: 22px; 
+}
+.service-item__heading::before{
+    content: "";
+    display: inline-block;
+    border-radius: 1px;
+    width: 2px;
+    height: 16px;
+    background: linear-gradient(90deg, #FF5B2E 0.39%, #FFA187 100.29%);
+    margin-right: 12px;
+    padding-top: -8px;
+}
+.service-item__desc{
+    padding-top: 18px;
+    margin-left: 28px;
+    width: 244px;
+    color: #656689;
+    font-family: Poppins;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+}
+.service-item__more{
+    display: inline-flex;
+    align-items: center;
+    padding-top: 24px;
+    margin-left: 28px;
+    color: #34396A;
+    font-family: Sora;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 12px;
+}
+.service-item__more::after{
+    content: url(../icon/service-more.svg);
+    margin-left: 5px;
+}
+.service__body{
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    column-gap: 70px;
+}
+.service__colum--media::after{
+    content: "";
+    top: 492px;
+    height: 350px;
+    background-color: #9DF1FB;
+}
+.service__img{
+    width: 100%;
+    position: relative;
+    z-index: 1;
+    display: block;
+}
+.service__media{
+    position: relative;
+    margin-top: 18px;
+}
+.service__media::after{
+    content: "";
+    position: absolute;
+    height: 350px;
+    left: 16px;
+    right: 16px;
+    bottom: 0;
+    border-radius: 10px;
+    background: linear-gradient(180deg, #9DF1FB 0%, #73D0DB 108.14%);
+}
+.service__cta-wrap{
+    display: inline-flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    margin-top: 40px;
+    margin-left: 25%;
+    width: 214px;
+    height: 56px;
+    border-radius: 31px;
+    border: 1px solid #FF5B2E;
+    opacity: 0.6;
+    box-shadow: 0px 13px 26px -8px rgba(255, 91, 46, 0.42);
+}
