--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -944,3 +944,104 @@ input{
     background-color: #ffff;
     margin-left: 10px;
 }
+/*blog*/
+.blog{
+    background: #FFFAF5;
+}
+.blog-top{
+    display: flex;
+    justify-content: space-between;
+}
+.blog-heading{
+    margin-top: 39px;
+    color: #000958;
+    font-family: Sora;
+    font-size: 52px;
+    font-weight: 700;
+    line-height: 62px;
+}
+.blog-desc{
+    width: 350px;
+    color: #656689;
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 30px;
+}
+.blog-btn{
+    margin-top: 24px;
+    display: inline-flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 182px;
+    height: 56px;
+    flex-shrink: 0;
+    border-radius: 31px;
+    border: 1px solid #FF5B2E;
+    opacity: 0.6;
+    box-shadow: 0px 13px 26px -8px rgba(255, 91, 46, 0.42);
+    color: #FF5B2E;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 16px;
+}
+.blog-img-inner{
+    padding-top: 20px;
+    position: relative;
+    width: 358px;
+    height: 362px;
+    flex-shrink: 0;
+    border-radius: 24px 24px 0 24px;
+    background: #90CCFF;
+}
+.blog-img{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 296px;
+    display: block;
+    padding-left: 40px;
+}
+.blog-date{
+    padding-left: 40px;
+    color: #FFF;
+    font-family: Sora;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+}
+.blog-body-heading{
+    margin-top: 28px;
+    width: 338px;
+    color: #000958;
+    font-family: Sora;
+    font-size: 22px;
+    font-weight: 600;
+    line-height: 34px;
+}
+.blog-body-desc{
+    margin-top: 16px;
+    width: 351px;
+    color: #656689;
+    font-family: Poppins;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+}
+.blog-body{
+    display: flex;
+    margin-top: 54px;
+}
+.blog-item{
+    margin-right: 48px;
+}
+.blog-img-decor1{
+    background-color: #FF997E;
+}
+.blog-img-decor2{
+    background-color: #5BD6E2;
+}
